Added redis cache mechanism and unit testings

--- a/UserManagement.API/appsettings.json
+++ b/UserManagement.API/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Redis": {
+    "DefaultConnection": "localhost:6379"
+  }
 }
